Implemented needed changes for up to update 5