@@ -4,12 +4,10 @@ import com.diamssword.redCrystal.behavior.base.RedCompBehavior;
 import com.diamssword.redCrystal.storage.RedElement;
 import com.diamssword.redCrystal.worldInteraction.FacingUtil;
 import com.hypixel.hytale.component.*;
-import com.hypixel.hytale.math.matrix.Matrix4d;
+import com.hypixel.hytale.math.matrix.Matrix4dUtil;
+import org.joml.*;
 import com.hypixel.hytale.math.shape.Box;
 import com.hypixel.hytale.math.vector.*;
-import com.hypixel.hytale.math.vector.Vector3d;
-import com.hypixel.hytale.math.vector.Vector3f;
-import com.hypixel.hytale.math.vector.Vector3i;
 import com.hypixel.hytale.protocol.*;
 import com.hypixel.hytale.protocol.packets.player.DisplayDebug;
 import com.hypixel.hytale.server.core.HytaleServer;
@@ -24,8 +22,11 @@ import com.hypixel.hytale.server.core.universe.PlayerRef;
 import com.hypixel.hytale.server.core.universe.world.ParticleUtil;
 import com.hypixel.hytale.server.core.universe.world.PlayerUtil;
 import com.hypixel.hytale.server.core.universe.world.storage.EntityStore;
+import org.joml.Vector3d;
+import org.joml.Vector3i;
 
 import javax.annotation.Nonnull;
+import java.lang.Math;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 
@@ -66,19 +67,19 @@ public class RedComponentDisplayUtils {
 	}
 
 	public static Vector3d getCenteredPosition(Vector3i position, BlockFace face, Vector2d offset) {
-		return position.toVector3d().clone().add(0.5, 0.5, 0.5).clone().add(FacingUtil.facingToDir(face, 0.51, offset.x, offset.y));
+		return new Vector3d(position).add(0.5, 0.5, 0.5).add(FacingUtil.facingToDir(face, 0.51, offset.x, offset.y));
 	}
 
-	public static Vector3d getIOPosition(short index, RedCompBehavior behavior, boolean isOutput) {
+	public static Vector3d getIOPosition(short index, RedCompBehavior<?> behavior, boolean isOutput) {
 		return isOutput ? getOutputPosition(index, behavior) : getInputPosition(index, behavior);
 	}
 
-	public static Vector3d getInputPosition(short index, RedCompBehavior behavior) {
+	public static Vector3d getInputPosition(short index, RedCompBehavior<?> behavior) {
 		var spacing = behavior.InputsCount() < 6 ? 0.2f : 0.1f;
 		return getCenteredPosition(behavior.parent.getParent().getPosition(), behavior.parent.getFace(), new Vector2d((index - (behavior.InputsCount() - 1) / 2f) * spacing, -0.35));
 	}
 
-	public static Vector3d getOutputPosition(short index, RedCompBehavior behavior) {
+	public static Vector3d getOutputPosition(short index, RedCompBehavior<?> behavior) {
 
 		var spacing = behavior.outputsCount() < 6 ? 0.2f : 0.1f;
 		return getCenteredPosition(behavior.parent.getParent().getPosition(), behavior.parent.getFace(), new Vector2d((index - (behavior.outputsCount() - 1) / 2f) * spacing, 0.35));
@@ -159,7 +160,7 @@ public class RedComponentDisplayUtils {
 	}
 
 	public static Color redColorFromShort(short value) {
-		int v = Math.max(0, Math.min(RedCompBehavior.MAX, value & 0xFFFF));
+		int v = Math.clamp(value & 0xFFFF, RedCompBehavior.MIN, RedCompBehavior.MAX);
 
 		double t = v / (double) RedCompBehavior.MAX;
 		double gamma = 1.8;
@@ -176,7 +177,7 @@ public class RedComponentDisplayUtils {
 
 	public static int redFromShort(short value) {
 		value = (short) Math.min(value, 255);
-		int v = Math.max(0, Math.min(RedCompBehavior.MAX, value & 0xFFFF));
+		int v = Math.clamp(value & 0xFFFF, RedCompBehavior.MIN, RedCompBehavior.MAX);
 		double gamma = 1;                                 // adjust for perceptual brightness
 		int r = (int) Math.round(RedCompBehavior.MAX * Math.pow(v / (double) RedCompBehavior.MAX, gamma));
 		return 0xFF000000 | (r << 16);
@@ -193,18 +194,17 @@ public class RedComponentDisplayUtils {
 	}
 
 	public static DisplayDebug getBeamPacket(@Nonnull Vector3d position, @Nonnull Vector3d direction, @Nonnull Vector3f color, float time, float scale, boolean fade) {
-		Vector3d directionClone = direction.clone();
-		Matrix4d tmp = new Matrix4d();
+		Vector3d directionClone = new Vector3d(direction);
 		Matrix4d matrix = new Matrix4d();
 		matrix.identity();
 		matrix.translate(position);
 		double angleY = Math.atan2(directionClone.z, directionClone.x);
-		matrix.rotateAxis(angleY + (Math.PI / 2), 0.0, 1.0, 0.0, tmp);
+		matrix.rotate(-(angleY + (Math.PI / 2)), 0.0, 1.0, 0.0);
 		double angleX = Math.atan2(Math.sqrt(directionClone.x * directionClone.x + directionClone.z * directionClone.z), directionClone.y);
-		matrix.rotateAxis(angleX, 1.0, 0.0, 0.0, tmp);
+		matrix.rotate(-angleX, 1.0, 0.0, 0.0);
 		matrix.translate(0.0, directionClone.length() * 0.5, 0.0);
 		matrix.scale(scale, directionClone.length(), scale);
-		return new DisplayDebug(DebugShape.Cylinder, matrix.asFloatData(), new com.hypixel.hytale.protocol.Vector3f(color.x, color.y, color.z), time, buildFlags(fade), null, 0.8f);
+		return new DisplayDebug(DebugShape.Cylinder, Matrix4dUtil.asFloatData(matrix), new Vector3f(color.x, color.y, color.z), time, buildFlags(fade), null, 0.8f);
 
 	}
 
@@ -228,13 +228,13 @@ public class RedComponentDisplayUtils {
 
 	public static void drawBeam(Store<EntityStore> store, Vector3d from, Vector3d to, Ref<EntityStore> player) {
 
-		Vector3d relative = new Vector3d().assign(to).subtract(from);  // to - from
+		Vector3d relative = new Vector3d(to).sub(from);  // to - from
 		//Vector3f rotation = Vector3f.lookAt(relative);  // Or pass result Vector3f
 		//SpatialResource<Ref<EntityStore>, EntityStore> playerSpatialResource = store.getResource(EntityModule.get().getPlayerSpatialResourceType());
 		//ObjectList<Ref<EntityStore>> playerRefs = SpatialResource.getThreadLocalReferenceList();
 		//playerSpatialResource.getSpatialStructure().collect(from, 75.0, playerRefs);
 		Vector3d relativeTargetOffset = new Vector3d(from.x - to.x, from.y - to.y, from.z - to.z);
-		var rotation = Vector3f.lookAt(relativeTargetOffset.negate());
+		var rotation = Rotation3f.lookAt(relativeTargetOffset.negate());
 
 		ParticleUtil.spawnParticleEffect("Test", from.x, from.y, from.z, (float) (Math.toRadians(90) + rotation.y), rotation.z, rotation.x, 0.1f, null, null, List.of(player), store);
 	}
